testsuite/poke.pkl/eq-structs-diag-1.pk
/* { dg-do compile } */

type Foo = struct {};
type Bar = struct {};

var i = Foo {} == Bar {}; /* { dg-error "invalid.*\n.*expected Foo" } */
